# minimal-rust-function-for-c2pa

./: Cargo.toml  README.md
crates/c2pa_macros/: Cargo.toml
crates/c2pa_macros/src/: lib.rs
crates/c2pa_primitives/: Cargo.toml
crates/c2pa_primitives/src/: lib.rs  main.rs
crates/c2pa_primitives/tests/: compile_fail.rs  macro_tests.rs
crates/c2pa_primitives/tests/ui/: unverified_rejected.rs  unverified_rejected.stderr
src/: lib.rs  main.rs
