[workspace]
resolver = "2"
members = [
    "crates/c2pa_primitives",
    "crates/c2pa_macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sha2 = "0.10"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
